Page Layout Complete

--- a/public/index.html
+++ b/public/index.html
@@ -43,10 +43,42 @@
     </div>
 
     <div class="container">
-
-      <h1>Bootstrap starter template</h1>
-      <p>Use this document as a way to quick start any new project.<br> All you get is this message and a barebones HTML document.</p>
-
+		<div class="row">
+			<div class="span2">
+				<h2>Power's</h2>
+				<button id="ACPower" class="btn">AC Power</button>
+				<button id="AMPPower" class="btn">AMP Power</button>
+				<button id="AMPOn" class="btn">AMP On</button>
+				<button id="W2On" class="btn">W2 On</button>
+				<button id="RXAnt" class="btn">RX Ant</button>
+		
+			</div>
+			<div class="span2">
+				<h2>Antenna's</h2>
+				<button id="80M" class="btn">80M Dipole</button>
+		<button id="6M" class="btn">HF 6M V</button>
+				<button id="160M" class="btn">160M Vertical</button>
+				<button id="Step" class="btn">Steppir</button>
+				<button id="40M" class="btn">40M V</button>
+				<button id="GND" class="btn">Ground/Reset</button>
+		
+			</div>
+		</div>
+		
+		
+		<div class="row">
+			<div class="span2">
+			 <h2>Monitoring</h2>
+			 <p>A0:xxxx</p>
+			 <p>A1:xxxx</p>
+			 <p>A2:xxxx</p>
+			 <p>A3:xxxx</p>
+			 <p>A4:xxxx</p>
+			 <p>A5:xxxx</p>
+			 </div>
+		</div>
+				
+ 
     </div> <!-- /container -->
 
     <!-- Le javascript
